# simxrdCSP

./: CLAUDE.md  main.py  pyproject.toml
docs/: 提交说明.md  数据集说明.md  比赛说明.md
